# ecollect

./: CMakeLists.txt  README.md  collect.grams.sh
inc/: Algorithms.h  DataTypes.h  FileReader.h  Hash.h  ProgressIndicator.h  Tuple.h  Utils.h
src/: DataTypes.cpp  Tuple.cpp  Utils.cpp  ecollect.cpp  eshuffle.cpp  esort.cpp
